# perplexity-web-mcp

./: CHANGELOG.md  Dockerfile  README.md  mcp_http.py  pyproject.toml
desktop-extension/: manifest.json
scripts/: reference_model_config.json
skills/perplexity-web-mcp/: SKILL.md
skills/perplexity-web-mcp/references/: api-endpoints.md  mcp-tools.md  models.md
src/perplexity_web_mcp/: models.py  shared.py
src/perplexity_web_mcp/api/: server.py
src/perplexity_web_mcp/cli/: ai_doc.py  doctor.py  main.py
src/perplexity_web_mcp/data/: SKILL.md
src/perplexity_web_mcp/mcp/: server.py
