[project]
name = "perplexity-web-mcp-cli"
version = "0.12.2"
description = "CLI, MCP server, and Anthropic/OpenAI API-compatible interface for Perplexity AI."
authors = [{ name = "Jacob BD" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10,<3.14"
keywords = ["perplexity", "ai", "mcp", "anthropic", "api", "client"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "curl-cffi>=0.15.0,<1.0",
    "loguru>=0.7.3,<1.0",
    "orjson>=3.11.6,<4.0",
    "pydantic>=2.12.5,<3.0",
    "tenacity>=9.1.2,<10.0",
    "python-dotenv>=1.0.0,<2.0",
    "rich>=13.0.0,<15.0",
    "rich-click>=1.8",
    "fastmcp>=2.14.4,<3.0",
    "fastapi>=0.115.0,<1.0",
    "uvicorn>=0.30.0,<1.0",
    "httpx>=0.27.0,<1.0",
]

[dependency-groups]
dev = [
    "beautifulsoup4>=4.14.3",
    "jsbeautifier>=1.15.4",
    "lxml>=6.0.2",
    "prek>=0.3.0",
]
lint = [
    "ruff>=0.14.14",
    "ty>=0.0.14",
]
tests = [
    "pytest>=9.0.2",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
]

[project.urls]
Homepage = "https://github.com/jacob-bd/perplexity-web-mcp"
Repository = "https://github.com/jacob-bd/perplexity-web-mcp.git"
Issues = "https://github.com/jacob-bd/perplexity-web-mcp/issues"

[tool.ruff]
line-length = 120
indent-width = 4

[tool.ruff.lint]
select = [
    "F",      # Pyflakes: unused imports/variables, undefined names
    "E",      # pycodestyle errors: basic PEP 8 style violations
    "W",      # pycodestyle warnings: whitespace issues, blank lines
    "I",      # isort: import sorting and organization
    "UP",     # pyupgrade: upgrade syntax for newer Python versions
    "B",      # flake8-bugbear: common bugs and design problems
    "SIM",    # flake8-simplify: simplify complex code patterns
    "C4",     # flake8-comprehensions: better list/dict/set comprehensions
    "PIE",    # flake8-pie: misc. lints (unnecessary pass, duplicate keys)
    "RUF",    # Ruff-specific: modern Python best practices
    "PERF",   # Perflint: performance anti-patterns
    "FURB",   # refurb: modernize legacy Python idioms
    "PTH",    # flake8-use-pathlib: prefer pathlib over os.path
    "PL",     # Pylint: broad set of code quality checks
]
ignore = [
    "PLR0912",   # Too many branches (complex validation logic is acceptable)
    "PLR0913",   # Too many arguments in function definition (common in APIs)
    "PLR2004",   # Magic value used in comparison (too strict for general use)
]
fixable = ["ALL"]
dummy-variable-rgx = "^_$"

[tool.ruff.lint.isort]
lines-after-imports = 2
force-sort-within-sections = true
split-on-trailing-comma = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
docstring-code-format = true
skip-magic-trailing-comma = false

[project.scripts]
pwm = "perplexity_web_mcp.cli.main:main"
pwm-mcp = "perplexity_web_mcp.mcp:run_server"

[tool.uv.build-backend]
module-name = "perplexity_web_mcp"

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"
